--- a/misa/src/App.css
+++ b/misa/src/App.css
@@ -1,8 +1,17 @@
 .container {
-  max-width: 600px;
+  max-width: 1000px;
+  width: 100%;
   margin: auto;
   padding: 16px;
   position: relative; /* Make this container relative */
+}
+
+.flex-dong
+{
+    display: flex;
+    flex-direction: row;
+    padding: 0px;
+    background-color: #ffffff;
 }
 
 .text-center {
@@ -12,20 +21,21 @@
 
 .flex {
   display: flex;
-  flex-direction: row; /* 세로로 정렬 */
+  flex-direction: row;
+  padding: 0px;
+  background-color: #faf5ff
 }
-
 
 .justify-center {
   justify-content: center;
 }
 
 .mb-4 {
-  margin-bottom: 16px;
+  margin-bottom: 26px;
 }
 
 .space-x-4 > *:not(:last-child) {
-  margin-right: 16px;
+  margin-right: 2px;
 }
 
 .border {
@@ -35,7 +45,7 @@
 }
 
 .rounded {
-  border-radius: 8px;
+  border-radius: 18px;
 }
 
 .overflow-hidden {
@@ -50,28 +60,9 @@
   color: #1a202c;
 }
 
-.bg-gray-200 {
-  background-color: #edf2f7;
-}
-
-.text-gray-700 {
-  color: #4a5568;
-}
-
-.text-gray-500 {
-  color: #a0aec0;
-}
-
-.border-b-2 {
-  border-bottom: 2px solid;
-}
-
-.border-gray-900 {
-  border-color: #1a202c;
-}
-
 .bg-purple-100 {
   background-color: #faf5ff;
+  height: 100%;
 }
 
 .bg-purple-500 {
@@ -82,12 +73,32 @@
   color: #ffffff;
 }
 
+.text-gray-500 {
+  color: #a0aec0;
+}
+
 .button {
   padding: 8px 16px;
   border: none;
   background: none;
   cursor: pointer;
   font-size: 16px;
+}
+
+.map_button-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-bottom: 16px; /* Adjust as needed */
+}
+
+.map_button {
+  padding: 10px 10px;
+  background: none;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
 }
 
 .button-selected {
@@ -98,10 +109,11 @@
 .button-unselected {
   color: #a0aec0;
 }
+
 .floor-container {
-  flex-basis: 20%; /* Adjust the basis to decrease width */
+  flex-basis: 25%; /* Adjust the basis to decrease width */
   flex-grow: 0; /* Prevent it from growing */
-  height: 10000%; /* 부모 요소의 100% 높이로 설정 */
+  height: 1000%; /* Set to 100% height */
 }
 
 .floor {
@@ -111,14 +123,19 @@
 }
 
 .tenant-container {
-  padding: 0;
+  padding: 5px;
+  width: 75%; /* 3/4 width equivalent */
+  height: 700px;
+  overflow-y: auto;
+  background-color: #ffffff;
 }
 
 .tenant {
   width: 100%; /* Full width */
+  height: 45px;
   padding: 8px 0;
-  padding-left : 20px;
-  border-bottom: 1px solid #e2e8f0; /* Increased border width */
+  padding-left: 20px;
+  border-bottom: 3px solid #e2e8f0; /* Increased border width */
   box-sizing: border-box; /* Ensure padding is included in width calculation */
 }
 
@@ -153,12 +170,12 @@
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
+
 }
 
 .floor-button img {
   margin-right: 8px;
 }
-
 
 .centered-image {
   position: absolute;
@@ -166,6 +183,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10; /* Ensure it appears on top */
+}
+
+.head {
+  border-bottom: 2px solid gray;
+  padding: 10px;
 }
 
 @font-face {
@@ -176,4 +198,44 @@
 
 body {
   font-family: "BMDOHYEON-Regular";
+}
+
+.no-wrap {
+  flex-wrap: nowrap;
+}
+
+@media (max-width: 768px) {
+  .map_button-container {
+    justify-content: flex-end;
+  }
+
+  .map_button {
+    margin-left: 0;
+  }
+
+  .flex-col {
+    flex-direction: column;
+
+  }
+
+  .tenant-container {
+    width: 100%; /* Full width for small screens */
+    background-color: #ffffff;
+  }
+
+  .floor-container {
+    width: 100%; /* Full width for small screens */
+    display: flex;
+    flex-direction: column; /* Changed to column for smaller screens */
+    overflow-x: auto;
+  }
+
+  .floor {
+    flex: 1;
+    padding: 8px;
+  }
+
+  .no-wrap {
+    flex-wrap: wrap;
+  }
 }
